--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -6,6 +6,7 @@
     --color-brown: rgb(77, 31, 5);
     --color-active: rgb(245, 238, 230);
     --color-violet: rgb(185, 115, 185);
+    --color-tomato: tomato;
 
     --border-radius-sm: 3px;
     --border-radius-medium: 5px;
