--- a/src/components/UI/index.css
+++ b/src/components/UI/index.css
@@ -2,12 +2,24 @@
     --color-light: rgb(209, 105, 19);
     --color-dark: rgb(245, 235, 229);
     --color-grey: rgb(134, 132, 130);
+    --color-blue: rgb(63, 129, 228);
 
     --font-size-sm: 14px;
+    --font-size-medium: 16px;
     --font-family-main: sans-serif;
     --font-bold: 600;
 
     --transition: 0.4s;
 
     --border-radius: 3px;
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
+img {
+    display: block;
 }
