--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -66,6 +66,12 @@
     --theme-default-bgimg: var(--theme-neitral-bgimg);
 }
 
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
 body {
     margin: 0;
     padding: 0;
