--- a/src/components/ErrorMessage/ErrorMessage.module.css
+++ b/src/components/ErrorMessage/ErrorMessage.module.css
@@ -8,3 +8,12 @@
     text-align: center;
     text-shadow: 0 0 2px var(--color-brown);
 }
+
+.video {
+    display: block;
+    margin: auto;
+    width: 400px;
+    margin-top: var(--spacing-large);
+    border-radius: var(--border-radius-medium);
+    box-shadow: var(--box-shadow-black);
+}
